--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Callie Bensel</title>
+      <link rel="stylesheet" href="style.css">
+  </head>
+</html>
