--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Callie Bensel</title>
+    <title>Github Page</title>
       <link rel="stylesheet" href="style.css">
   </head>
+  <body>
+    <h1>Callie Bensel</h1>
+    
+    <h2> Professional Experience</h2>
+  </body>
 </html>
