Add unordered list

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
   <body>
     <h1>Callie Bensel</h1>
     
-    <h2> Professional Experience</h2>
+    <h2>4040 18th Ave. South. Minneapolis, MN 55407 - 507-459-4203 - callie.f.bensel@gmail.com</h2>
+    
+    <h3>Professional Experience</h3>
+    <h4>Dero Bike Rack Company</h4>
+    <h5>August 2015-current</h5>
+    <ul>
+      <li> 
+      <p
+      Create and manage consumer quotes using Microsoft Dynamix
+      </li>
+    </ul>
+  
   </body>
 </html>
