--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <ul>
       <li> 
       <p
-      Create and manage consumer quotes using Microsoft Dynamix
+      Create and manage consumer quotes using Microsoft Dynamix</p>
       </li>
     </ul>
   
