--- a/index.html
+++ b/index.html
@@ -11,12 +11,21 @@
     
     <h3>Professional Experience</h3>
     <h4>Dero Bike Rack Company</h4>
-    <h5>August 2015-current</h5>
+    <h5>Market Research/Inside Sales: August 2015-May 2016</h5>
+    <h6>Sales Coordinator: May 2016-current</h6>
     <ul>
-      <li> 
-      <p
-      Create and manage consumer quotes using Microsoft Dynamix</p>
-      </li>
+      <li>Create and manage consumer quotes using Microsoft Dynamix</li>
+      <li>Coordinate large and small projects from initial inquiry to installation</li>
+      <li>Design layouts of bicycle storage rooms using the CAD program</li>
+      <li>Close sales in a timely manner</li>
+      <li>Work with marketing department to gather information for tarfeted email blasts</li>
+      <li>Analyze construction data to establish new clients using database software CMD Insight</li>
+      <li>Monitor market trends dependent on location, consumer needs, and city rules/regulations</li>
+      <li>Oversee local installations and perform site visits</li>
+      <li>Provide technical and customer support services for existing and potential clients</li>
+      <li>Collaborate with mareting and sales teams to inform new and existing consumers about the brand</li>
+    <li>Educate to the customer and the consumer the attributes of each product offering</li>
+    <li>Propose solutions for challenging projects due to time constraints and space limitations</li>
     </ul>
   
   </body>
