Add ACF, education, interests and activities

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h3>Professional Experience</h3>
     <h4>Dero Bike Rack Company</h4>
     <h5>Market Research/Inside Sales: August 2015-May 2016</h5>
-    <h6>Sales Coordinator: May 2016-current</h6>
+    <h5>Sales Coordinator: May 2016-current</h6>
     <ul>
       <li>Create and manage consumer quotes using Microsoft Dynamix</li>
       <li>Coordinate large and small projects from initial inquiry to installation</li>
@@ -27,6 +27,36 @@
     <li>Educate to the customer and the consumer the attributes of each product offering</li>
     <li>Propose solutions for challenging projects due to time constraints and space limitations</li>
     </ul>
-  
+  <h4>Angry Catfish Bicycle and Coffee Bar</h4>
+  <h5>Manager</h5>
+  <ul>
+    <li>Maintained website contect relevant to product reviews, personal riding stories, and responding to customers</li>
+    <li>Constructed social media strategies for Twitter, Facebook, and Instagram</li>
+    <li>Organized and planned events that supported contributing brands, individuals, and culture</li>
+    <li>Built and maintained relationships with dealers, distributors, and collaborative business partners</li>
+    <li>Set business and marketing goals for both coffee and bike shop</li>
+    <li>Created and enforced company policies, guidelines, and regulations</li>
+    <li>Responsible for ordering all cafe products, ride nutrition, women's clothing and varios retail items</li>
+    <li>Managed highly skilled barista team including training in new employees, conducting yearly reviews, appointing roles and responsibilities, and writing the work schedule</li>
+<h3>Education</h3>
+<h4>University of Minnesota - Twin Cities, MN</h4>
+<h5>May 2012</h5>
+<ul>
+  <li>Bachelor of Arts, Public Relations and Spanish Studies</li>
+  <h3>Relevent Skills</h3>
+  <ul>
+    <li>Technical: Data collection, management, and analysis; technical writing; presentations to clients and colleagues; employee supervision</li>
+<li>Operating Systems: Mac OS, Windows, Android</li>
+<li>Software: MS word; Excel; Power Point; Access; Adobe Photoshop; Adobe Acrobat Professional; Wordperfect; InDesign; AutoCAD; Quickbooks; MS Dynamics</li>
+  </ul>
+  <h3>Interests and Activities</h3>
+  <ul>
+    <li>Braver than the Elements - Winter rides sponsored by Rapha/The Angry Catfish - Ride leader</li>
+    <li>Winter bicycle maintenance class - The Angry Catfish 2014 - Instructor</li>
+    <li>Member of the Fulton All-City Race Team 2014-current</li>
+    <li>Volunteer - Free Bikes 4 Kidz</li>
+    <li>Volunteer Coordinator - Fulton Gran Fondo bike ride and block party</li>
+    <li>Member of the Lake Hiawatha clean up committee</li>
+  </ul>
   </body>
 </html>
