--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
     <h5>Market Research/Inside Sales: August 2015-May 2016</h5>
     <h5>Sales Coordinator: May 2016-current</h6>
     <ul>
-      <li>Create and manage consumer quotes using Microsoft Dynamix</li>
+      <li>Create and manage consumer quotes using Microsoft Dynamics</li>
       <li>Coordinate large and small projects from initial inquiry to installation</li>
-      <li>Design layouts of bicycle storage rooms using the CAD program</li>
+      <li>Design layouts of bicycle storage rooms using a CAD program</li>
       <li>Close sales in a timely manner</li>
-      <li>Work with marketing department to gather information for tarfeted email blasts</li>
+      <li>Work with marketing department to gather information for targeted email blasts</li>
       <li>Analyze construction data to establish new clients using database software CMD Insight</li>
       <li>Monitor market trends dependent on location, consumer needs, and city rules/regulations</li>
       <li>Oversee local installations and perform site visits</li>
       <li>Provide technical and customer support services for existing and potential clients</li>
-      <li>Collaborate with mareting and sales teams to inform new and existing consumers about the brand</li>
+      <li>Collaborate with marketing and sales teams to inform new and existing consumers about the brand</li>
     <li>Educate to the customer and the consumer the attributes of each product offering</li>
     <li>Propose solutions for challenging projects due to time constraints and space limitations</li>
     </ul>
   <h4>Angry Catfish Bicycle and Coffee Bar</h4>
   <h5>Manager</h5>
   <ul>
-    <li>Maintained website contect relevant to product reviews, personal riding stories, and responding to customers</li>
+    <li>Maintained website content relevant to product reviews, personal riding stories, and responding to customers inquiries</li>
     <li>Constructed social media strategies for Twitter, Facebook, and Instagram</li>
     <li>Organized and planned events that supported contributing brands, individuals, and culture</li>
     <li>Built and maintained relationships with dealers, distributors, and collaborative business partners</li>
