--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <body>
     <h1>Callie Bensel</h1>
     
-    <h4>4040 18th Ave. South. Minneapolis, MN 55407 - 507-459-4203 - callie.f.bensel@gmail.com</h4>
+    <h4>
+    4040 18th Ave. South. Minneapolis, MN 55407 507-459-4203 
+    callie.f.bensel@gmail.com
+    507-459-4203</h4>
     
     <h2>Professional Experience</h2>
     <h3>Dero Bike Rack Company</h3>
