--- a/index.html
+++ b/index.html
@@ -1,65 +1,27 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
   <head>
-    <title>Github Page</title>
-      <link rel="stylesheet" href="style.css">
+    <title>Resume Application</title>
+    <link rel="stylesheet" href="style.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
   </head>
-  <body>
-    <h1>Callie Bensel</h1>
-    
-    <h4>
-    4040 18th Ave. South. Minneapolis, MN 55407 - 507-459-4203 - callie.f.bensel@gmail.com</h4>
-    
-    <h2>Professional Experience</h2>
-    <h3>Dero Bike Rack Company</h3>
-    <h4>Market Research/Inside Sales: August 2015-May 2016</h4>
-    <h4>Sales Coordinator: May 2016-current</h4>
-    <ul>
-      <li>Create and manage consumer quotes using Microsoft Dynamics</li>
-      <li>Coordinate large and small projects from initial inquiry to installation</li>
-      <li>Design layouts of bicycle storage rooms using a CAD program</li>
-      <li>Close sales in a timely manner</li>
-      <li>Work with marketing department to gather information for targeted email blasts</li>
-      <li>Analyze construction data to establish new clients using database software CMD Insight</li>
-      <li>Monitor market trends dependent on location, consumer needs, and city rules/regulations</li>
-      <li>Oversee local installations and perform site visits</li>
-      <li>Provide technical and customer support services for existing and potential clients</li>
-      <li>Collaborate with marketing and sales teams to inform new and existing consumers about the brand</li>
-    <li>Educate to the customer and the consumer the attributes of each product offering</li>
-    <li>Propose solutions for challenging projects due to time constraints and space limitations</li>
-    </ul>
-  <h3>Angry Catfish Bicycle and Coffee Bar</h3>
-  <h4>Manager</h4>
-  <ul>
-    <li>Maintained website content relevant to product reviews, personal riding stories, and responding to customers inquiries</li>
-    <li>Constructed social media strategies for Twitter, Facebook, and Instagram</li>
-    <li>Organized and planned events that supported contributing brands, individuals, and culture</li>
-    <li>Built and maintained relationships with dealers, distributors, and collaborative business partners</li>
-    <li>Set business and marketing goals for both coffee and bike shop</li>
-    <li>Created and enforced company policies, guidelines, and regulations</li>
-    <li>Responsible for ordering all cafe products, ride nutrition, women's clothing and varios retail items</li>
-    <li>Managed highly skilled barista team including training in new employees, conducting yearly reviews, appointing roles and responsibilities, and writing the work schedule</li>
-
-<h3>Education</h3>
-<h4>University of Minnesota - Twin Cities, MN</h4>
-<h4>May 2012</h4>
-<ul>
-  <li>Bachelor of Arts, Public Relations and Spanish Studies</li>
-  <h3>Relevent Skills</h3>
-  <ul>
-    <li>Technical: Data collection, management, and analysis; technical writing; presentations to clients and colleagues; employee supervision</li>
-<li>Operating Systems: Mac OS, Windows, Android</li>
-<li>Software: MS word; Excel; Power Point; Access; Adobe Photoshop; Adobe Acrobat Professional; Wordperfect; InDesign; AutoCAD; Quickbooks; MS Dynamics</li>
-  </ul>
   
-  <h3>Interests and Activities</h3>
-  <ul>
-    <li>Braver than the Elements - Winter rides sponsored by Rapha/The Angry Catfish - Ride leader</li>
-    <li>Winter bicycle maintenance class - The Angry Catfish 2014 - Instructor</li>
-    <li>Member of the Fulton All-City Race Team 2014-current</li>
-    <li>Volunteer - Free Bikes 4 Kidz</li>
-    <li>Volunteer Coordinator - Fulton Gran Fondo bike ride and block party</li>
-    <li>Member of the Lake Hiawatha clean up committee</li>
-  </ul>
+  <body>
+    <header>
+      <div class="full-width">
+        <div class="half-width">
+          <h1>Callie Bensel</h1>
+        </div>
+        <div class="half-width">
+          <ul>
+            <li>Minneapolis, MN</li>
+            <li>507-459-4203</li>
+            <li>callie.f.bensel@gmail.com</li>
+          </ul>
+        </div>
+      </div>
+    </header>
   </body>
-</html>
+
+
+
