--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
           <h1>Callie Bensel</h1>
         </div>
         <div class="half-width">
-          <ul>
-            <li>Minneapolis, MN</li>
-            <li>507-459-4203</li>
-            <li>callie.f.bensel@gmail.com</li>
+          <h2>Minneapolis, MN - 507.459.4203 - callie.f.bensel@gmail.com</h2>
           </ul>
         </div>
       </div>
