--- a/index.html
+++ b/index.html
@@ -18,6 +18,31 @@
         </div>
       </div>
     </header>
+    <main>
+      <div class="full-width">
+        <div class="half-width">
+          <h1>Professional Experience</h1>
+        </div>
+        <div class="half-width">
+           <h1>Dero Bike Rack Co - Minneapolis, MN - Market Research/Sales Coordinator</h1>
+           <h2>2015-2016</h2>
+           <ul>
+            <li>Create and manage consumer quotes using Microsoft Dynamics</li>
+            <li>Coordinate large and small projects from initial inquiry to installation</li>
+            <li>Design layouts of bicycle storage rooms using a CAD program</li>
+            <li>Close sales in a timely manner</li>
+            <li>Work with marketing department to gather information for targeted email blasts</li>
+            <li>Analyze construction data to establish new clients using database software CMD Insight</li>
+            <li>Monitor market trends dependent on location, consumer needs, and city rules/regulations</li>
+            <li>Oversee local installations and perform site visits</li>
+            <li>Provide technical and customer support services for existing and potential clients</li>
+            <li>Collaborate with marketing and sales teams to inform new and existing consumers about the brand</li>
+            <li>Educate to the customer and the consumer the attributes of each product offering</li>
+            <li>Propose solutions for challenging projects due to time constraints and space limitations</li>
+           </ul>
+        </div>
+      </div>
+    </main>
   </body>
 
 
