Added interests and activities

--- a/index.html
+++ b/index.html
@@ -76,7 +76,26 @@
         </div>
         <div class="half-width">
           <ul>
-            
+            <li>Web Development: HTML, CSS, and Javascript</li>
+            <li>Technical: Data collection, management, and analysis; technical writing; presentations to clients and colleagues; employee supervision</li>
+            <li>Operating Systems: Mac OS, Windows, Android</li>
+            <li>Software: MS word; Excel; Power Point; Access; Adobe Photoshop; Adobe Acrobat Professional; Wordperfect; InDesign; AutoCAD; Quickbooks; MS Dynamics</li>
+          </ul>
+        </div>
+      </div>
+      
+      <div class="full-width">
+        <div class="half-width">
+          <h1>Interests and Activities</h1>
+        </div>
+        <div class="half-width">
+          <ul>
+            <li>Braver than the Elements - Winter rides sponsored by Rapha/The Angry Catfish - Ride leader</li>
+            <li>Winter bicycle maintenance class - The Angry Catfish 2014 - Instructor</li>
+            <li>Member of the Fulton All-City Race Team 2014-current</li>
+            <li>Volunteer - Free Bikes 4 Kidz</li>
+            <li>Volunteer Coordinator - Fulton Gran Fondo bike ride and block party</li>
+            <li>Member of the Lake Hiawatha clean up committee</li>
           </ul>
         </div>
       </div>
