--- a/index.html
+++ b/index.html
@@ -45,18 +45,22 @@
       </div>
       
       <div class="full-width">
-        <h1>Angry Catfish Bicycle and Coffee Bar - Minneapolis, MN - Manager</h1>
-        <h2>2011-2015</h2>
-        <ul>
-          <li>Maintained website content relevant to product reviews, personal riding stories, and responding to customers inquiries</li>
-          <li>Constructed social media strategies for Twitter, Facebook, and Instagram</li>
-          <li>Organized and planned events that supported contributing brands, individuals, and culture</li>
-          <li>Built and maintained relationships with dealers, distributors, and collaborative business partners</li>
-          <li>Set business and marketing goals for both coffee and bike shop</li>
-          <li>Created and enforced company policies, guidelines, and regulations</li>
-          <li>Responsible for ordering all cafe products, ride nutrition, women's clothing and varios retail items</li>
-          <li>Managed highly skilled barista team including training in new employees, conducting yearly reviews, appointing roles and responsibilities, and writing the work schedule</li>
-        </ul>
+        <div class="half-width">
+          <h1>Angry Catfish Bicycle and Coffee Bar - Minneapolis, MN - Manager</h1>
+          <h2>2011-2015</h2>
+        </div>
+        <div class="half-width">
+          <ul>
+            <li>Maintained website content relevant to product reviews, personal riding stories, and responding to customers inquiries</li>
+            <li>Constructed social media strategies for Twitter, Facebook, and Instagram</li>
+            <li>Organized and planned events that supported contributing brands, individuals, and culture</li>
+            <li>Built and maintained relationships with dealers, distributors, and collaborative business partners</li>
+            <li>Set business and marketing goals for both coffee and bike shop</li>
+            <li>Created and enforced company policies, guidelines, and regulations</li>
+            <li>Responsible for ordering all cafe products, ride nutrition, women's clothing and varios retail items</li>
+            <li>Managed highly skilled barista team including training in new employees, conducting yearly reviews, appointing roles and responsibilities, and writing the work schedule</li>
+          </ul>
+        </div>  
       </div>
       
       <div class="full-width">
