--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body>
     <header>
       <div class="full-width">
-        <div class="half-width">
+        <div class="left-half">
           <h1>Callie Bensel</h1>
         </div>
-        <div class="half-width">
+        <div class="right-half">
           <h2>Minneapolis, MN - 507.459.4203 - callie.f.bensel@gmail.com</h2>
           </ul>
         </div>
