--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <h2>Minneapolis, MN - 507.459.4203 - callie.f.bensel@gmail.com</h2>
           </ul>
         </div>
+        <img src="<a data-flickr-embed="true"  href="https://www.flickr.com/photos/35706596@N05/18165341100/in/album-72157653432000640/" title="IMG_2865"><img src="https://c5.staticflickr.com/1/398/18165341100_a2f44390d1_z.jpg" width="640" height="427" alt="IMG_2865"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>"/>
       </div>
     </header>
     <main>
@@ -23,11 +24,11 @@
       <div class="full-width">
         <div class="half-width">
           <h1>Professional Experience</h1>
+          <h2>Dero Bike Rack Co - Minneapolis, MN</h2>
+          <h3>Market Research/Sales Coordinator | 2015-2016</h3>
         </div>
         <div class="half-width">
-           <h1>Dero Bike Rack Co - Minneapolis, MN - Market Research/Sales Coordinator</h1>
-           <h2>2015-2016</h2>
-           <ul>
+          <ul>
             <li>Create and manage consumer quotes using Microsoft Dynamics</li>
             <li>Coordinate large and small projects from initial inquiry to installation</li>
             <li>Design layouts of bicycle storage rooms using a CAD program</li>
@@ -46,8 +47,8 @@
       
       <div class="full-width">
         <div class="half-width">
-          <h1>Angry Catfish Bicycle and Coffee Bar - Minneapolis, MN - Manager</h1>
-          <h2>2011-2015</h2>
+          <h2>Angry Catfish Bicycle and Coffee Bar - Minneapolis, MN</h2>
+          <h3>Manager | 2011-2015</h3>
         </div>
         <div class="half-width">
           <ul>
@@ -68,9 +69,10 @@
           <h1>Education</h1>
         </div>
         <div class="half-width">
-          <h1>University of Minnesota - Twin Cities</h1>
-          <h2>2008-2012</h2>
+          <h1>University of Minnesota - Twin Cities | 2008-2012</h1>
           <h3>Bachelor of Arts, Spanish Studies and Public Relations</h3>
+          <h1>Skillcrush | 2016-current</h1>
+          <h3>Front End Web Development Blueprint</h3>
         </div>
       </div>
       
