--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
           <h2>Minneapolis, MN - 507.459.4203 - callie.f.bensel@gmail.com</h2>
           </ul>
         </div>
-        <img src="<a data-flickr-embed="true"  href="https://www.flickr.com/photos/35706596@N05/18165341100/in/album-72157653432000640/" title="IMG_2865"><img src="https://c5.staticflickr.com/1/398/18165341100_a2f44390d1_z.jpg" width="640" height="427" alt="IMG_2865"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>"/>
+        <img src="https://www.flickr.com/photos/35706596@N05/18165341100/in/album-72157653432000640/" title="IMG_2865"><img src="https://c5.staticflickr.com/1/398/18165341100_a2f44390d1_z.jpg" width="640" height="427" alt="IMG_2865"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>"/>
       </div>
     </header>
     <main>
       
       <div class="full-width">
+        <h1>Professional Experience</h1>
         <div class="half-width">
-          <h1>Professional Experience</h1>
           <h2>Dero Bike Rack Co - Minneapolis, MN</h2>
           <h3>Market Research/Sales Coordinator | 2015-2016</h3>
         </div>
