--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <body>
     <header>
       <div class="full-width">
-        <div class="half-width">
+        <div class="left-half">
           <h1>Callie Bensel</h1>
         </div>
-        <div class="half-width">
+        <div class="right-half">
           <h2>Minneapolis, MN | 507.459.4203 | callie.f.bensel@gmail.com</h2>
         </div>
-        <img src="https://www.flickr.com/photos/35706596@N05/18165341100/in/album-72157653432000640/" title="IMG_2865"><img src="https://c5.staticflickr.com/1/398/18165341100_a2f44390d1_z.jpg" width="640" height="427" alt="IMG_2865"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>"/>
+        <img src="https://c5.staticflickr.com/1/398/18165341100_a2f44390d1_z.jpg" width="640" height="427" alt="IMG_2865"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>"/>
       </div>
     </header>
     <main>
