added social media

--- a/index.html
+++ b/index.html
@@ -16,17 +16,16 @@
           <h2>Minneapolis, MN | 507.459.4203 | callie.f.bensel@gmail.com</h2>
         </div>
       </div>
-      <img src="https://c5.staticflickr.com/1/398/18165341100_a2f44390d1_z.jpg" width="640" height="427" alt="IMG_2865"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>"/>
     </header>
     <main>
-      
+      <img src="https://c5.staticflickr.com/1/398/18165341100_a2f44390d1_z.jpg" width="640" height="427" alt="IMG_2865"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>"/>
       <div class="full-width">
         <h1>Professional Experience</h1>
         <div class="left-half">
-          <h2>Dero Bike Rack Co - Minneapolis, MN</h2>
-          <h3>Market Research/Sales Coordinator | 2015-2016</h3>
+          <h2>Dero - Minneapolis, MN</h2>
         </div>
         <div class="right-half">
+          <h3>Market Research/Sales Coordinator | 2015-2016</h3>
           <ul>
             <li>Create and manage consumer quotes using Microsoft Dynamics</li>
             <li>Coordinate large and small projects from initial inquiry to installation</li>
@@ -47,9 +46,9 @@
       <div class="full-width">
         <div class="left-half">
           <h2>Angry Catfish Bicycle and Coffee Bar - Minneapolis, MN</h2>
-          <h3>Manager | 2011-2015</h3>
         </div>
         <div class="right-half">
+          <h3>Manager | 2011-2015</h3>
           <ul>
             <li>Maintained website content relevant to product reviews, personal riding stories, and responding to customers inquiries</li>
             <li>Constructed social media strategies for Twitter, Facebook, and Instagram</li>
@@ -106,6 +105,14 @@
       </div>
     </main>
   </body>
+  <footer>
+    <ul>
+      <li><a href="http://www.twitter.com/calliefunn"/><img src="img/twitter.png" alt="twitter icon"/></li>
+    	<li><a href="http://www.instagram.com/calliefunn"/><img src="img/instagram.png" alt="instagram icon"/></li>
+    	<li><a href="http://www.linkedin.com/calliebensel"/><img src="img/linkedin.png" alt="LinkedIn icon"/></li>
+    	<li><a href="http://www.github.com/calliebensel"/><img src="img/github.png" alt="Github icon"/></li>
+    </ul>
+  </footer>
 
 
 
