--- a/index.html
+++ b/index.html
@@ -105,14 +105,7 @@
       </div>
     </main>
   </body>
-  <footer>
-    <ul>
-      <li><a href="http://www.twitter.com/calliefunn"/><img src="img/twitter.png" alt="twitter icon"/></li>
-    	<li><a href="http://www.instagram.com/calliefunn"/><img src="img/instagram.png" alt="instagram icon"/></li>
-    	<li><a href="http://www.linkedin.com/calliebensel"/><img src="img/linkedin.png" alt="LinkedIn icon"/></li>
-    	<li><a href="http://www.github.com/calliebensel"/><img src="img/github.png" alt="Github icon"/></li>
-    </ul>
-  </footer>
+</html>
 
 
 
