--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       
       <div class="full-width">
         <div class="left-half">
-          <h2>Angry Catfish Bicycle and Coffee Bar - Minneapolis, MN</h2>
+          <h2>Angry Catfish - Minneapolis, MN</h2>
         </div>
         <div class="right-half">
           <h3>Manager | 2011-2015</h3>
