--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
       <div class="full-width">
         <h1>Professional Experience</h1>
         <div class="left-half">
-          <h2>Dero - Minneapolis, MN</h2>
+          <h2>Dero</h2>
+          <h3>Minneapolis, MN</h3>
         </div>
         <div class="right-half">
           <h3>Market Research/Sales Coordinator | 2015-2016</h3>
@@ -45,7 +46,8 @@
       
       <div class="full-width">
         <div class="left-half">
-          <h2>Angry Catfish - Minneapolis, MN</h2>
+          <h2>Angry Catfish</h2>
+          <h3>Minneapolis, MN</h3>
         </div>
         <div class="right-half">
           <h3>Manager | 2011-2015</h3>
