--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="full-width">
         <h1>Professional Experience</h1>
         <div class="left-half">
-          <h2>Dero</h2>
+          <h2>Dero Bike Racks</h2>
           <h3>Minneapolis, MN</h3>
         </div>
         <div class="right-half">
