--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <main>
       <div class="full-width">
-        <img src="https://c5.staticflickr.com/1/398/18165341100_a2f44390d1_z.jpg" width="640" height="427" alt="IMG_2865"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>"/>
+        <img src="https://c5.staticflickr.com/1/398/18165341100_a2f44390d1_z.jpg" width="640" height="427" alt="IMG_2865">
         <h1>Professional Experience</h1>
         <div class="left-half">
           <h2>Dero Bike Racks</h2>
