--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
           <h1>Education</h1>
         </div>
         <div class="right-half">
-          <h1>University of Minnesota - Twin Cities | 2008-2012</h1>
-          <h3>Bachelor of Arts, Spanish Studies and Public Relations</h3>
-          <h1>Skillcrush | 2016-current</h1>
-          <h3>Front End Web Development Blueprint</h3>
+          <h3>University of Minnesota - Twin Cities | 2008-2012</h1>
+          <h4>Bachelor of Arts, Spanish Studies and Public Relations</h3>
+          <h3>Skillcrush | August 2016-current</h1>
+          <h4>Front End Web Development Blueprint</h3>
         </div>
       </div>
       
