--- a/index.html
+++ b/index.html
@@ -6,20 +6,32 @@
     <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
   </head>
   
-  <body>
     <header>
-      <div class="full-width">
-        <div class="left-half">
-          <h1>Callie Bensel</h1>
+      <div class="header">
+        <div class="image-left">
+          <img src="https://c5.staticflickr.com/1/398/18165341100_a2f44390d1_z.jpg" width="640" height="427" alt="IMG_2865">
         </div>
-        <div class="right-half">
-          <h2>Minneapolis, MN | 507.459.4203 | callie.f.bensel@gmail.com</h2>
+        <div class="header-right">
+          <h1>Callie Bensel</h1>
+          <h2>Minneapolis, MN</h2>
+          <h3>507.459.4203</h3>
+          <h4>callie.f.bensel@gmail.com</h4>
         </div>
       </div>
+      <div class="badges">
+        <ul>
+          <li><style>.ig-b- { display: inline-block; }
+           .ig-b- img { visibility: hidden; }
+           .ig-b-:hover { background-position: 0 -60px; } .ig-b-:active { background-position: 0 -120px; }
+           .ig-b-48 { width: 48px; height: 48px; background: url(//badges.instagram.com/static/images/ig-badge-sprite-48.png) no-repeat 0 0; }
+            @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
+            .ig-b-48 { background-image: url(//badges.instagram.com/static/images/ig-badge-sprite-48@2x.png); background-size: 60px 178px; } }</style>
+            <a href="https://www.instagram.com/calliefunn/?ref=badge" class="ig-b- ig-b-48"><img src="//badges.instagram.com/static/images/ig-badge-48.png" alt="Instagram" /></a></li>
     </header>
+        
     <main>
       <div class="full-width">
-        <img src="https://c5.staticflickr.com/1/398/18165341100_a2f44390d1_z.jpg" width="640" height="427" alt="IMG_2865">
+        
         <h1>Professional Experience</h1>
         <div class="left-half">
           <h2>Dero Bike Racks</h2>
