--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
             .ig-b-48 { background-image: url(//badges.instagram.com/static/images/ig-badge-sprite-48@2x.png); background-size: 60px 178px; } }</style>
             <a href="https://www.instagram.com/calliefunn/?ref=badge" class="ig-b- ig-b-48"><img src="//badges.instagram.com/static/images/ig-badge-48.png" alt="Instagram" /></a></li>
+          <li><a href="https://twitter.com/CallieFunn" class="twitter-follow-button" data-show-count="false">Follow @CallieFunn</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script></li>
+          <li><a href="https://www.linkedin.com/pub/callie-bensel/ba/532/a93" style="text-decoration:none;"><span style="font: 80% Arial,sans-serif; color:#0783B6;"><img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_in_20x15.png" width="20" height="15" alt="View Callie Bensel's LinkedIn profile" style="vertical-align:middle;" border="0">&nbsp;View Callie Bensel's profile</span></a></li>
     </header>
         
     <main>
