--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
    </header>
         
     <body>
-      <header>
+      <section>
         <h1>Professional Experience</h1>
-      </header>
+      </section>
       <main>
         <div class="dero">
         <div class="dero-left">
