updated header again

--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
   </head>
   
     <header>
-      <div class="res">
+      <div class="image">
           <img src="https://c5.staticflickr.com/1/398/18165341100_a2f44390d1_z.jpg" width="640" height="427" alt="IMG_2865">
-          <span>Callie Bensel</span>
-          <span>Minneapolis, MN</span>
-          <span>507.459.4203</span>
-          <span>callie.f.bensel@gmail.com</span>
-          <span>
-              <a href="https://twitter.com/CallieFunn" class="twitter-follow-button" data-show-count="false">Follow @CallieFunn</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-          </span>
-          <span>
+      </div>
+      <div class="contact">
+          <h1><span>Callie Bensel</span></h1>
+          <h2><span>Minneapolis, MN</span></h2>
+          <h3><span>507.459.4203</span></h3>
+          <h4><span>callie.f.bensel@gmail.com</span></h4>
+          <h5><span><a href="https://twitter.com/CallieFunn" class="twitter-follow-button" data-show-count="false">Follow @CallieFunn</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </span></h5>
+          <h6><span>
               <a href="https://www.linkedin.com/pub/callie-bensel/ba/532/a93" style="text-decoration:none;"><span style="font: 80% Arial,sans-serif; color:#0783B6;"><img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_in_20x15.png" width="20" height="15" alt="View Callie Bensel's LinkedIn profile" style="vertical-align:middle;" border="0">&nbsp;View Callie Bensel's profile</span></a>
-          </span>
+            </span></h6>
         </div>
    </header>
         
