--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
   </head>
   
-    <header>
-      <div class="image">
+    <div id="header">
+      <div id="image">
           <img src="https://c5.staticflickr.com/1/398/18165341100_a2f44390d1_z.jpg" width="640" height="427" alt="IMG_2865">
       </div>
       <div class="contact">
@@ -21,7 +21,7 @@
               <a href="https://www.linkedin.com/pub/callie-bensel/ba/532/a93" style="text-decoration:none;"><span style="font: 80% Arial,sans-serif; color:#0783B6;"><img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_in_20x15.png" width="20" height="15" alt="View Callie Bensel's LinkedIn profile" style="vertical-align:middle;" border="0">&nbsp;View Callie Bensel's profile</span></a>
             </span></h6>
         </div>
-   </header>
+   </div>
         
     <body>
       <main>
